fixed growing issue on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ body {
   top: 0;
   left: 0;
   z-index: 0;
-  height: 120vh;
+  height: 70vmax;
 }
 
 .home-container {
@@ -74,6 +74,6 @@ body {
   }
 
   .background {
-    height: 100vh;
+    height: 120vmax;
   }
 }
